Anti-escaping buttons to end game if your opponent left the game early

--- a/src/views/Game/AntiGrief.styl
+++ b/src/views/Game/AntiGrief.styl
@@ -16,7 +16,7 @@
  */
 
 
-.AntiStalling {
+.AntiStalling, .AntiEscaping {
     display: flex;
     align-items: center;
     justify-content: space-around;
