wip: send voted action to the back end

--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -123,6 +123,10 @@
                 margin-bottom: 3px; // override bizarre default 0 margin bottom so text lines up properly
             }
         }
+
+        button {
+            margin-top: 0.5rem;
+        }
     }
 
     .reported-game h3 {
