--- a/src/components/Player/Player.styl
+++ b/src/components/Player/Player.styl
@@ -157,6 +157,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+        margin-left: .25rem;
     }
 
     .Player-rank {
