--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -133,7 +133,7 @@ light.fg                                = #202020
 light.fg-increased-contrast             = #000000
 light.mix-base                          = #999
 light.background-color                  = light.bg
-light.card-background-color             = lighten(light.bg, 20%)
+light.card-background-color             = darken(light.bg, 3%)
 light.text-color                        = light.fg
 light.text-color-active                 = darken(light.text-color, 50%)
 light.spectator-text-color              = #0A06A8
