--- a/src/components/Chat/ChatChannelList.styl
+++ b/src/components/Chat/ChatChannelList.styl
@@ -30,7 +30,7 @@
             themed color colored-background-fg
         }
         &.unjoined {
-            themed color shade2
+            themed color shade1
         }
         &.unread {
             themed color primary
@@ -110,5 +110,11 @@
     .joinable {
         border-top: 0px solid transparent;
         themed border-top-color shade3
+        
+        input[type="search"] {
+            width: 100%;
+            margin: 1rem 0;
+            themed background bg
+        }
     }
 }
