--- a/src/views/ChatView/ChatView.styl
+++ b/src/views/ChatView/ChatView.styl
@@ -17,7 +17,9 @@
 
 
 channel-utils-height=8.4rem;
-channel-width=12rem;
+channel-width=20%;
+channel-max-width=25rem;
+channel-min-width=12rem;
 
 .ChatView {
     position: fixed;
@@ -37,6 +39,8 @@ channel-width=12rem;
         flex-shrink: 0;
         flex-grow: 0;
         width: channel-width;
+        max-width: channel-max-width;
+        min-width: channel-min-width;
         //overflow-y: scroll;
 
         display: flex;
@@ -46,16 +50,20 @@ channel-width=12rem;
         flex-grow: 0;
         flex-shrink: 0;
         overflow-x: hidden;
+
+        box-sizing: border-box;
+        padding: 1rem;
+        themed background card-background-color;
     }
 
     .ChatChannelList {
-        border-right: 1px solid transparent;
-        themed border-right-color shade3
+        /* border-right: 1px solid transparent; */
+        /* themed border-right-color shade3 */
     }
 
     .ChatUsersList {
-        border-left: 1px solid transparent;
-        themed border-left-color shade3
+        /* border-left: 1px solid transparent; */
+        /* themed border-left-color shade3 */
     }
 
     .ChatLog {
