--- a/src/components/AccountWarning/AccountWarning.styl
+++ b/src/components/AccountWarning/AccountWarning.styl
@@ -98,3 +98,63 @@
 
 
 }
+
+.AccountWarningAck {
+    position: fixed;
+    top: auto;
+    bottom: auto;
+    left: auto;
+    right: auto;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 30rem;
+    max-width: calc(95vw - 2rem);
+    max-height: calc(95vh - 2rem);
+
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+
+    z-index: z.account-warning;
+    themed background-color info
+    themed color colored-background-fg 
+    border-radius: 0.5rem;
+    padding: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+    .space  {
+        flex-grow: 1;
+        height: 1rem;
+    }
+
+    .buttons {
+        font-size: 1.5rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        user-select: none;
+    }
+
+    button {
+        font-size: 1.1rem;
+    }
+
+    input[type="checkbox"] {
+        margin-right: 0.5rem;
+        width: 1.2rem;
+        height: 1.2rem;
+    }
+
+    label {
+        cursor: pointer;
+        margin-right: 1rem;
+    }
+
+
+
+}
