--- a/src/components/ModerateUser/ModerateUser.styl
+++ b/src/components/ModerateUser/ModerateUser.styl
@@ -59,4 +59,9 @@
     #ui-class-extra {
         width: 5rem;
     }
+
+    // We'll probably lay these out better when there are more of them.
+    .avoid-wrap {
+        font-size: smaller;
+    }
 }
