Show a warning icon if we can't contact termserver

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -90,7 +90,8 @@ z = {
 
     dynamic-help       : 20000,  // Help popups would like to go on top of everthing
 
-    account-warning    : 50003,  
+    account-warning    : 50003,
+    network-warning    : 50004,
     superchat-modal    : 50005,
     superchat          : 50010,
 }
