Start with slow timeouts and pings, make them faster for folk with low latency.
Also detect failure to connect at the start.

--- a/src/components/NetworkStatus/NetworkStatus.styl
+++ b/src/components/NetworkStatus/NetworkStatus.styl
@@ -1,7 +1,17 @@
+// This element is intended to be a red "no wifi" indicator
+// positioned over the top of almost everything, and in a
+// place on the screen that is relatively uncluttered in both
+// normal and zen mode for games.
+
+// The "no wifi" indicator is assembled from two font awesome icons
+// superimposed on each other at their centres by using flex `center`,
+// and has the "wifi" element flashing for extra attention grabbing
+// coolness.
+
 .NetworkStatus {
     position: absolute;
     z-index: z.network-warning;
-    top: 4rem;
+    top: 4rem;  // into the gap between nav-bar and dock, or under the Z for zen.
     right: 1.5rem;
     display: flex;
     align-items: center;
