Updated announcement center to use relative durations instead of absolute expiration times

--- a/src/views/AnnouncementCenter/AnnouncementCenter.styl
+++ b/src/views/AnnouncementCenter/AnnouncementCenter.styl
@@ -51,4 +51,21 @@
             padding-right: 1.0rem;
         }
     }
+
+    .duration {
+        display: inline-flex;
+        width: 100%;
+        align-items: flex-end;
+        height: 2.3rem;
+
+        input {
+            width: 10rem;
+            margin-right: 0.5rem;
+        }
+        .text {
+            display: inline-block;
+            min-width: 5rem;
+            white-space: nowrap;
+        }
+    }
 }
