rounded corners, enum for state.

--- a/src/components/NetworkStatus/NetworkStatus.styl
+++ b/src/components/NetworkStatus/NetworkStatus.styl
@@ -23,6 +23,7 @@
     justify-content: center;
     font-weight: bold;
     padding-right: 1rem;
+    border-radius: 0.3rem;
 
     .icon {
         position: relative;
