--- a/src/views/Game/Game.styl
+++ b/src/views/Game/Game.styl
@@ -82,100 +82,6 @@ goban-view-bar-width=400px
         box-shadow: 0 3px 5px 1px rgba(50,50,50,0.51) !important;
     }
 
-    .play-controls {
-        flex-grow: 0;
-        flex-shrink: 0;
-        display: block;
-        user-select: none;
-        display: flex;
-        align-items: flex-start;
-        flex-direction: column;
-        justify-content: center;
-        padding-top: 0.5rem;
-        max-width: 100vw;
-        //height: 23rem;
-        //min-height: 5rem;
-
-        > div {
-            width: 100%;
-        }
-
-        .annulled-indicator {
-            color: red;
-            text-align: center;
-        }
-
-        .game-action-buttons {
-            position: relative;
-            text-align: center;
-        }
-
-        .analyze-mode-buttons {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-            margin-top: 5px;
-            margin-bottom: 5px;
-            button {
-                themed background-color success
-                themed-darken border-color success border-darken-amount
-            }
-            button:hover {
-                themed-lighten background-color success button-highlight-brighten-amount
-                themed-darken border-color success button-border-highlight-darken-amount
-            }
-        }
-        .pause-controls {
-            text-align: center;
-        }
-        .play-buttons {
-            height: 2.6rem;
-            min-height: 2.6rem;
-            display: flex;
-            width: 100%;
-            justify-content: space-between;
-            > span {
-                flex-grow: 1;
-                flex-basis: 33%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-            > span:first-child {
-                justify-content: flex-start;
-            }
-            > span:last-child {
-                justify-content: flex-end;
-            }
-        }
-        .stone-removal-controls {
-            text-align: center;
-
-            .explanation {
-                padding: 1rem;
-                font-style: italic;
-            }
-        }
-        .cancel-button {
-            /*
-            position: absolute;
-            right: 0.5em;
-            bottom: 0.5em;
-            */
-        }
-        .undo-button {
-            //position: absolute;
-            //left: 0.5em;
-        }
-        .accept-undo-button {
-            /*
-            position: absolute;
-            left: 0.5em;
-            bottom: 0.5em;
-            */
-        }
-    }
 
     .filler {
         flex-grow: 1;
@@ -183,14 +89,14 @@ goban-view-bar-width=400px
     }
 
     .center-col {
-        .play-controls {
+        .PlayControls {
             flex-grow: 0;
             padding-top: 0;
         }
     }
 
     &.wide .right-col {
-        .play-controls {
+        .PlayControls {
             flex-grow: 1;
             flex-shrink: 0;
             //justify-content: center;
@@ -503,7 +409,7 @@ goban-view-bar-width=400px
 			#move-tree-container {
 				display: none;
 			}
-			.play-controls {
+			.PlayControls {
 				flex-grow: 0;
                 /*
                 .accept-undo-button {
