--- a/src/views/Game/PlayControls.styl
+++ b/src/views/Game/PlayControls.styl
@@ -48,6 +48,7 @@
             padding: 0.5rem;
             border-radius: 0.5rem;
             max-width: 90vw;
+            text-align: justify;
         }
     }
 
