Change actions class name to modal-actions

--- a/src/components/AnnulQueueModal/AnnulQueueModal.styl
+++ b/src/components/AnnulQueueModal/AnnulQueueModal.styl
@@ -100,8 +100,8 @@
         width: 85%;
     }
 
-    .actions, .close {
-        margin: 0 20px;
+    .modal-actions, .close {
+        margin: 0 0px;     
     }
 
     .strikethrough {
