Fix text overflowing buttons

--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -88,6 +88,10 @@
 
     .actions-right {
         align-items: flex-end; // put the buttons down close-ish to the send-warning buttons
+        button {
+            height: auto;
+            padding: 7px;
+        }
     }
 
     .automod-analysis {
