Implement "accept" and "reject" an offer

--- a/src/components/Notifications/Notifications.styl
+++ b/src/components/Notifications/Notifications.styl
@@ -134,6 +134,11 @@ notification-list-height=14rem
         cursor: pointer;
         themed color fg
     }
+
+    .moderation-offer {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 
