--- a/src/components/ModerationOfferControl/ModerationOfferControl.styl
+++ b/src/components/ModerationOfferControl/ModerationOfferControl.styl
@@ -24,6 +24,10 @@
         margin-left: 0.2rem;
     }
 
+    .fa-times-circle-o {
+        color: red;
+    }
+
     button {
         margin-left: 0.5rem;
         font-size: smaller;
