Candidate wording and layout

--- a/src/components/Notifications/ModerationOfferModal.styl
+++ b/src/components/Notifications/ModerationOfferModal.styl
@@ -19,6 +19,11 @@
     width: 50rem;
     max-width: 100%;
 
+    .moderation-offer-details {
+        padding: 1rem;
+    }
+
+    // (copied from some other modal)
     .pane {
         min-width: 49%;
         box-sizing: border-box;
