Update ChatList style to avoid content shifting
---
Description: Main content (including nav bar) shifts when toggling the ChatList.
Fix: Update the box-sizing property to `border-box` to account for border and padding in the width values.

--- a/src/components/Chat/ChatIndicator.styl
+++ b/src/components/Chat/ChatIndicator.styl
@@ -59,6 +59,7 @@
     .ChatList {
         display: flex;
         position: absolute;
+        box-sizing: border-box;
         themed background-color bg
         top: navbar-height;
         right: 0;
