Second RDH: for the situation where they get powers but there are no reports for them to look at immediately.

--- a/src/components/IncidentReportTracker/IncidentReportTracker.styl
+++ b/src/components/IncidentReportTracker/IncidentReportTracker.styl
@@ -49,7 +49,7 @@
     .report-header {
         display: flex;
         flex-direction: row;
-        align-items: flex-end;
+        align-items: baseline;
         justify-content: space-between;
 
         .report-id {
