Finished intro flow for community moderator who has reports.

--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -29,7 +29,7 @@
         }
     }
 
-    .header {
+    .view-report-header {
         margin-bottom: 1 rem;
 
         .report-id {
@@ -38,6 +38,9 @@
         button {
             margin-left: 0.5rem;
             margin-right: 0.5rem;
+        }
+        .reports-center-selected-report {
+            padding-left: 0.5rem;
         }
     }
 
