Corner case handling for community moderator actions, and let moderators see all reports for now.

--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -40,6 +40,15 @@ reports_center_content_width=56rem
         }
     }
 
+
+    .voting-pane {
+        padding-bottom: 0.5rem; // intended to create margin for rdh highlighter
+
+        .no-report-actions-note,  .disabled-actions-note {
+            padding: 0 1rem 1rem 1rem;
+        }
+    }
+
     .actions {
         display: grid;
         grid-template-columns: 1fr 1fr;
