Fix spelling errors

--- a/src/components/ObserveGamesComponent/ObserveGamesComponent.styl
+++ b/src/components/ObserveGamesComponent/ObserveGamesComponent.styl
@@ -98,7 +98,7 @@
             text-align: right;
             align-items: baseline;
 
-            .labelshow {
+            .label_show {
                 margin-left: 1rem;
                 margin-right: 0.5rem;
                 white-space: nowrap;
