--- a/src/global_styl/flags16.styl
+++ b/src/global_styl/flags16.styl
@@ -29,7 +29,7 @@
 .f16 ._NATO{background-position:0 -176px;}
 .f16 ._Northern_Cyprus{background-position:0 -192px;}
 .f16 ._Northern_Ireland{background-position:0 -208px;}
-.f16 ._Olimpic_Movement{background-position:0 -224px;}
+.f16 ._Olympic_Movement{background-position:0 -224px;}
 .f16 ._OPEC{background-position:0 -240px;}
 .f16 ._Red_Cross{background-position:0 -256px;}
 .f16 ._Scotland{background-position:0 -272px;}
