--- a/src/global_styl/flags32.styl
+++ b/src/global_styl/flags32.styl
@@ -29,7 +29,7 @@
 .f32 ._NATO{background-position:0 -352px;}
 .f32 ._Northern_Cyprus{background-position:0 -384px;}
 .f32 ._Northern_Ireland{background-position:0 -416px;}
-.f32 ._Olimpic_Movement{background-position:0 -448px;}
+.f32 ._Olympic_Movement{background-position:0 -448px;}
 .f32 ._OPEC{background-position:0 -480px;}
 .f32 ._Red_Cross{background-position:0 -512px;}
 .f32 ._Scotland{background-position:0 -544px;}
