--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -438,7 +438,7 @@ button, a.btn, .btn {
 
     transition: background-color 0.3s ease;
 
-    &.noshadow {
+    &.no-shadow {
         box-shadow: none;
     }
 
