--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -346,7 +346,7 @@
             margin-left: .5em;
         }
 
-        .cell .cheat-alert-tooltiptext {
+        .cell .cheat-alert-tooltip-text {
             visibility: hidden;
             background-color: chocolate;
             color: #fff;
