--- a/src/views/Tournament/Tournament.styl
+++ b/src/views/Tournament/Tournament.styl
@@ -126,7 +126,7 @@
             }
         }
 
-        .signup-area {
+        .sign-up-area {
             flex-grow: 1;
             text-align: center;
             min-width: 20rem;
@@ -230,7 +230,7 @@
     .tournament-elimination-container {
         position: relative;
 
-        .matchdiv, .byediv {
+        .match-div, .bye-div {
             position: absolute;
             height: 2.5em;
             width: 12em;
