--- a/src/views/TournamentList/TournamentList.styl
+++ b/src/views/TournamentList/TournamentList.styl
@@ -28,7 +28,7 @@
         position: relative;
     }
 
-    .tabhead {
+    .tab-head {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
