--- a/src/views/Ladder/Ladder.styl
+++ b/src/views/Ladder/Ladder.styl
@@ -72,13 +72,13 @@
         cursor: pointer;
 
 
-        &.not-challengable {
+        &.not-challengeable {
             .Player, .right {
                 color #888 !important;
             }
         }
 
-        &.challengable {
+        &.challengeable {
             .Player, .right {
                 themed-important color link-color
             }
