Mark games where it's the opponents move
When looking at another player's list of games, the current user's games are
already highlighted as "green".  Also mark (as "grey") the other games where
it's their opponent's move.

This only changes the appearance of OTHER players' game lists:

- No effect on the current user's active games.
- No effect on the list of games in the "Watch" tab.

--- a/src/components/GobanLineSummary/GobanLineSummary.styl
+++ b/src/components/GobanLineSummary/GobanLineSummary.styl
@@ -59,6 +59,10 @@
         themed background-color miniboard-to-move;
     }
 
+    .opponents-move {
+        themed background-color miniboard-opponent-to-move;
+    }
+
     .game-name, .player {
         text-align: left;
         overflow: hidden;
