--- a/src/components/GameList/GameList.styl
+++ b/src/components/GameList/GameList.styl
@@ -52,6 +52,10 @@
         themed background-color miniboard-to-move
     }
 
+    .opponents-move {
+        themed background-color miniboard-opponent-to-move
+    }
+
     .goban-with-names {
         display: inline-flex;
         width: 12rem;
