--- a/src/components/MiniGoban/MiniGoban.styl
+++ b/src/components/MiniGoban/MiniGoban.styl
@@ -133,6 +133,14 @@
         themed border-color miniboard-to-move-border
     }
 
+    .board.opponents-move {
+        border: 1px solid transparent;
+        border-radius: 4px;
+        //padding: 1.2em;
+        themed background-color miniboard-opponent-to-move;
+        themed border-color miniboard-opponent-to-move-border
+    }
+
     .board.in-stone-removal-phase {
         border: 1px solid transparent;
         padding: 1em;
