Flipped marking opponent to move to viewed player to move when viewing a profile

--- a/src/components/GameList/GameList.styl
+++ b/src/components/GameList/GameList.styl
@@ -52,8 +52,8 @@
         themed background-color miniboard-to-move
     }
 
-    .opponents-move {
-        themed background-color miniboard-opponent-to-move
+    .viewed-users-move {
+        themed background-color miniboard-viewed-to-move
     }
 
     .goban-with-names {
