--- a/src/components/MiniGoban/MiniGoban.styl
+++ b/src/components/MiniGoban/MiniGoban.styl
@@ -133,12 +133,12 @@
         themed border-color miniboard-to-move-border
     }
 
-    .board.opponents-move {
+    .board.viewed-users-move {
         border: 1px solid transparent;
         border-radius: 4px;
         //padding: 1.2em;
-        themed background-color miniboard-opponent-to-move;
-        themed border-color miniboard-opponent-to-move-border
+        themed background-color miniboard-viewed-to-move;
+        themed border-color miniboard-viewed-to-move-border
     }
 
     .board.in-stone-removal-phase {
