Grey out whole RengoTeamManagementPane while waiting for server update: better feel.

--- a/src/components/RengoTeamManagementPane/RengoTeamManagementPane.styl
+++ b/src/components/RengoTeamManagementPane/RengoTeamManagementPane.styl
@@ -32,6 +32,7 @@
 
     .rengo-admin-container.pending {
         cursor: wait !important;
+        opacity: 50%;
     }
 
     .rengo-challenge-chat {
