Fix up styling of Sortable

--- a/src/components/Sortable/MultipleContainers/Virtualized.module.styl
+++ b/src/components/Sortable/MultipleContainers/Virtualized.module.styl
@@ -1,5 +1,10 @@
-.VirtualList {
-  > div {
-    overflow: hidden;
+// Note: this came with the example code, but does not appear to be used
+
+.MultipleContainers {
+
+  .VirtualList {
+    > div {
+      overflow: hidden;
+    }
   }
 }
