--- a/src/components/Sortable/components/OverflowWrapper/OverflowWrapper.module.styl
+++ b/src/components/Sortable/components/OverflowWrapper/OverflowWrapper.module.styl
@@ -1,8 +1,10 @@
-.OverflowWrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  overflow: hidden;
+.MultipleContainers {
+  .OverflowWrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow: hidden;
+  }
 }
