--- a/src/components/Sortable/components/Wrapper/Wrapper.module.styl
+++ b/src/components/Sortable/components/Wrapper/Wrapper.module.styl
@@ -1,11 +1,12 @@
-.Wrapper {
-  display: flex;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 20px;
-  justify-content: flex-start;
+.MultipleContainers {
+  .Wrapper {
+    display: flex;
+    width: 100%;
+    box-sizing: border-box;
+    justify-content: flex-start;
 
-  &.center {
-    justify-content: center;
+    &.center {
+      justify-content: center;
+    }
   }
 }
