--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -512,6 +512,9 @@ nowrap()
 
 @require "./components/material/*.styl";
 @require "./components/[A-Z]*/*.styl";
+@require "./components/[A-Z]*/*/*.styl";
+@require "./components/[A-Z]*/*/*/*.styl";
+@require "./components/[A-Z]*/*/*/*/*/*.styl";
 
 @require "./views/[A-Z]*/*.styl";
 @require "./views/docs/*.styl";
