--- a/src/components/Sortable/components/FloatingControls/FloatingControls.module.styl
+++ b/src/components/Sortable/components/FloatingControls/FloatingControls.module.styl
@@ -1,5 +1,7 @@
-.FloatingControls {
-  position: fixed;
-  top: 25px;
-  right: 25px;
+.MultipleContainers {
+  .FloatingControls {
+    position: fixed;
+    top: 25px;
+    right: 25px;
+  }
 }
