--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -125,6 +125,7 @@
         .action-selector {
             display: flex;
             align-items: center
+            padding: 0.3rem;
 
             input {
                 margin-bottom: 3px; // override bizarre default 0 margin bottom so text lines up properly
@@ -147,6 +148,10 @@
         display: inline-flex;
         width: 100%;
         max-width: 100vw;
+    }
+
+    .voting {
+        flex-basis: 100%;
     }
 }
 }
