Display any "moderation power offer" on a person's home page

--- a/src/views/Overview/EXV6Overview.styl
+++ b/src/views/Overview/EXV6Overview.styl
@@ -183,6 +183,13 @@
             margin-top: 2rem;
         }
     }
+
+    .moderation-offer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 1rem;
+    }
 }
 
 
