--- a/src/views/Game/GameTimings.styl
+++ b/src/views/Game/GameTimings.styl
@@ -25,8 +25,8 @@
     display: grid;
     grid-template-columns: auto auto auto auto;
 
-    padding-left: 1em;
-
+    padding-left: 1rem;
+    margin-bottom: 0.75rem;
     font-size: smaller;
 
     .timings-header {
