Updates for goban with merged custom colors and custom urls themes

--- a/src/components/GobanThemePicker/GobanThemePicker.styl
+++ b/src/components/GobanThemePicker/GobanThemePicker.styl
@@ -26,6 +26,7 @@
     .custom-theme-set {
         justify-content: flex-start !important;
         padding-left: 2rem;
+        padding-bottom: 1rem;
     }
 
     .theme-set, .custom-theme-set {
@@ -53,13 +54,15 @@
         }
 
         input[type=color] {
+            width: 1.5rem;
+            height: 1.5rem;
+            margin-left: 1.0rem;
             border: 0;
         }
 
         .board-color-selectors{
             display: flex;
             flex-direction: row;
-            justify-content: flex-start;
         }
         .color-reset {
             vertical-align: top;
@@ -80,12 +83,11 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            padding-left: 0.4rem;
+            padding-bottom: 1rem;
 
             .customUrlSelector {
-                width: 212px;
-                height: 24px;
-                border: 1px solid lightgrey;
+                width: 16rem;
+                border: 1px solid;
             }
 
         }
