Make sure custom theme styles are applied to custom theme picker, emphasise selected theme

--- a/src/components/GobanThemePicker/GobanThemePicker.styl
+++ b/src/components/GobanThemePicker/GobanThemePicker.styl
@@ -40,7 +40,7 @@
         .selector {
             margin: 1px;
             cursor: pointer;
-            border: 1px solid transparent;
+            border: 2px solid transparent;
             opacity: 0.5;
             color: white;
             word-wrap: break-word;
@@ -50,6 +50,7 @@
 
         .selector:hover, .selector.active {
             themed border-color primary
+            border-width: 2px;
             opacity: 1.0;
         }
 
@@ -88,6 +89,7 @@
             .customUrlSelector {
                 width: 16rem;
                 border: 1px solid;
+                margin-top: 3px;
             }
 
         }
