Fix tournament result colours and elimination graph for draws
Drawn games are recorded as "B+0.5,W+0.5", and were incorrectly being displayed
as wins for black.

- Check the full string of match results instead of just the first character.
- Fix the elimination graph drawing to allow for both players to continue.
- Choose colours for "tie" so it looks different from a loss.
- For accessibility, use a previously-unused colour from the accessibility
  table that is dark (since light text will be put on top of it).

Fixes #2536

--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -591,6 +591,9 @@ display: inline-block;
 .result-won {
     themed-desaturate-and-lighten-darken background-color win 55% 30%
 }
+.result-tie {
+    themed-desaturate-and-lighten-darken background-color tie 55% 30%
+}
 .result-lost {
     themed-desaturate-and-lighten-darken background-color loss 55% 30%
 }
