--- a/src/views/Tournament/Tournament.styl
+++ b/src/views/Tournament/Tournament.styl
@@ -185,6 +185,9 @@
     .win {
         @extend .result-won
     }
+    .tie {
+        @extend .result-tie
+    }
     .loss {
         @extend .result-lost
     }
