Allow groups to configure the rules for their ladders
Show the rules used in ladders on the Group page, and allow those rules to be
changed when editing the group.

Fixes #1042 (at least, adds one kind of configuration)

--- a/src/views/Group/Group.styl
+++ b/src/views/Group/Group.styl
@@ -110,6 +110,21 @@
         }
     }
 
+    .ladder-configuration {
+        table {
+            width: 100%;
+        }
+        th {
+            text-align: right;
+            width: 40%;
+            padding-right: 0.5rem;
+        }
+        td {
+            text-align: left;
+            width: 60%;
+        }
+    }
+
     .invitation-requests {
         .fa {
             display: inline-block;
