Show the rules configured for a ladder
On the ladder page itself, show what the rules are for the ladder.

Relates to #2541 (but doesn't really depend on it)

--- a/src/views/Ladder/Ladder.styl
+++ b/src/views/Ladder/Ladder.styl
@@ -49,6 +49,18 @@
         }
     }
 
+    .ladder-configuration {
+        th {
+            padding-right: 0.5rem;
+            text-align: right;
+            width: 40%;
+        }
+        td {
+            text-align: left;
+            width: 60%;
+        }
+    }
+
     .AutoSizer-container {
         flex: 1;
         width: 100%;
