Add some space between the log entries, and align vertically.

--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -140,6 +140,15 @@ reports_center_content_width=56rem
     .progress-bar.empty {
         themed background-color shade5
     }
+
+    .game-log {
+        tr {
+            vertical-align: top;
+        }
+        td>div {
+            margin-bottom: 2em
+        }
+    }
 }
 
 #ReportsCenterContainer {
