Each field on its own line.

--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -147,6 +147,9 @@ reports_center_content_width=56rem
         }
         td>div {
             margin-bottom: 2em
+            span {
+                display: inline-block;
+            }
         }
     }
 }
