Centre the ladder configuration
Put the centre of the ladder configuration in the centre of the ladder card on
the group page.

--- a/src/views/Group/Group.styl
+++ b/src/views/Group/Group.styl
@@ -116,12 +116,13 @@
         }
         th {
             text-align: right;
-            width: 40%;
-            padding-right: 0.5rem;
+            padding: 0.2rem;
+            width: 50%;
         }
         td {
             text-align: left;
-            width: 60%;
+            padding: 0.2rem;
+            width: 50%;
         }
     }
 
