Show rules in player card pop-up

--- a/src/views/Game/Players.styl
+++ b/src/views/Game/Players.styl
@@ -338,6 +338,11 @@
         text-align: right;
         padding-right: .3em;
     }
+
+    .score_breakdown .summary {
+        text-align: center;
+    }
+
     .score_breakdown div div {
         display: inline-block;
         width: 3em;
