--- a/src/components/Report/Report.styl
+++ b/src/components/Report/Report.styl
@@ -56,14 +56,17 @@
 
     .type-picker {
         flex: 0;
-        margin-top: 1rem;
         display: flex;
         flex-direction: column;
         align-items: center;
         align-content: stretch;
+        gap: 0.3rem;
         select {
             width: 100%;
             font-size: 1.3rem;
+        }
+        .report-category-description {
+            margin: 0.3rem;
         }
     }
 
