--- a/src/views/Overview/EXV6Overview.styl
+++ b/src/views/Overview/EXV6Overview.styl
@@ -16,6 +16,13 @@
  */
 
 
+#Overview-Container{
+    .welcome {
+        margin-top: 2rem;
+        text-align: center;
+        font-size: x-large;
+    }
+}
 #Overview {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
