--- a/src/views/Overview/Overview.styl
+++ b/src/views/Overview/Overview.styl
@@ -15,6 +15,13 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+#Overview-Container{
+    .welcome {
+        margin-top: 2rem;
+        text-align: center;
+        font-size: x-large;
+    }
+}
 
 #Overview {
     padding-left: 0.5rem;
