Center the board on mobile.
The margins were uneven (right: .5rem, left: 0).  This looks okay on
desktop because there are more items horizontally, but it drew complaints
from mobile users.

--- a/src/views/Game/Game.styl
+++ b/src/views/Game/Game.styl
@@ -326,6 +326,7 @@ goban-view-bar-width=400px
             position: relative;
             top: 25px;
         }
+        margin-right: unset;
     }
 
 
