Add player count to tournament signup section

--- a/src/views/Tournament/Tournament.styl
+++ b/src/views/Tournament/Tournament.styl
@@ -124,6 +124,10 @@
                     justify-content: center;
                 }
             }
+
+            .player-count {
+                text-align: center;
+            }
         }
 
         .sign-up-area {
