--- a/src/components/TabCompleteInput/TabCompleteInput.styl
+++ b/src/components/TabCompleteInput/TabCompleteInput.styl
@@ -18,7 +18,8 @@
 
 .TabCompleteInput {
     input {
-        width: 100%;
+        width: 100% !important;
+        height: 100% !important;
         box-sizing: border-box;
     }
 }
