Shuffle some items to optimize vertical space

--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -106,6 +106,12 @@ reports_center_content_width=56rem
         margin-top: 0;
     }
 
+    .created-note {
+        margin-left: 1rem;
+        font-size: smaller;
+        font-weight: normal;
+    }
+
     .reported-game-container {
         flex: 1;
         display: flex;
