Add the game time control into ViewReport (and slight layout tweak: MiniGoban at top of column)

--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -124,6 +124,15 @@ reports_center_content_width=56rem
 
         .reported-game-info {
             order: -1; // put this first so mobile layout is nice
+            .reported-turn {
+                padding: 0.25rem;
+            }
+        }
+
+        .reported-game-mini-goban {
+            .MiniGoban  {
+                justify-content: flex-start;
+            }
         }
 
         .col {
