Put a basic graph of CM helpful activity by day on the Activity Card

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -49,6 +49,10 @@
         }
     }
 
+    .mod-action-label {
+        margin: 0.5rem 0 5px 0.5rem !important;
+    }
+
     .vote-activity-graph {
         height: 300px;
     }
