--- a/src/views/Prizes/PrizeBatch.styl
+++ b/src/views/Prizes/PrizeBatch.styl
@@ -50,7 +50,7 @@
         th, td
             padding 10px
             text-align left
-            border-bottom 1px solid light.shade3
+            border-bottom 1px solid shade3
 
         th
             themed background-color shade4
@@ -84,37 +84,48 @@
 
     h3
         themed color primary
-        margin-bottom 10px
+        margin-bottom 20px
+        text-align center
 
     form
         .form-group
-            margin-bottom 10px
+            margin-bottom 20px
+            display flex
+            align-items center
 
             label
-                display block
-                margin-bottom 5px
+                themed color text-color
+                font-weight bold
+                margin-right 10px
+                flex-basis 100px
 
             input, select
-                width 100%
-                padding 5px
+                flex-grow 1
+                padding 10px
                 border 1px solid input-border
-                border-radius 3px
+                border-radius 5px
                 themed background-color input-bg
                 themed color input-fg
+                font-size 16px
 
-        .add-codes-btn
-            themed background-color primary
-            themed color colored-background-fg
-            border none
-            padding 10px 20px
-            border-radius 5px
-            cursor pointer
+            input[type="number"]
+                width 80px
 
-    .close-btn
-        themed background-color danger
-        themed color colored-background-fg
-        border none
-        padding 10px 20px
-        border-radius 5px
-        cursor pointer
-        margin-top 20px
+        .form-actions
+            display flex
+            justify-content center
+            margin-top 30px
+
+            .add-codes-btn, .cancel-btn
+                themed background-color primary
+                themed color colored-background-fg
+                border none
+                padding 10px 20px
+                border-radius 5px
+                cursor pointer
+                font-size 16px
+                margin 0 10px
+
+            .cancel-btn
+                themed background-color shade4
+                themed color text-color
