--- a/src/views/Prizes/PrizeRedemption.styl
+++ b/src/views/Prizes/PrizeRedemption.styl
@@ -5,7 +5,7 @@
     font-family Arial, sans-serif
 
     h2
-        themed color primary
+        themed color fg
         margin-bottom 20px
         text-align center
 
@@ -114,5 +114,5 @@
 
         &:focus
             outline none
-            border-color light.primary
+            themed border-color primary
             box-shadow 0 4px 12px rgba(0, 0, 0, 0.2)
