Added a pie to CM's view of their Profile, showing the summary of their efforts.

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -49,12 +49,16 @@
         }
     }
 
-    .mod-action-label {
+    .mod-graph-header {
         margin: 0.5rem 0 5px 0.5rem !important;
     }
 
     .vote-activity-graph {
         height: 300px;
+    }
+
+    .vote-outcome-summary {
+        height: 200px;
     }
 
     .name-input {
